<resources>
    <string name="app_name" translatable="false">BirdLog</string>
    <string name="thirtyTwoBit" translatable="false">32bit (~55MB)</string>

    <string name="samples_zero">No audio input: All audio samples are zero!</string>
    <string name="ignore_gps_date">Ignore location and date</string>
    <string name="latitude">Lat</string>
    <string name="longitude">Lon</string>
    <string name="dialog_Later_button">Maybe later</string>
    <string name="dialog_StarOnGitHub">Do you like this app? Please give a star on GitHub or buy the developer a coffee via PayPal.</string>
    <string name="download_model">Download Model</string>
    <string name="download_model_text">BirdLog needs to download the BirdNET model (~ 30MB). \n No commercial use allowed \n(CC-BY-NC-SA 4.0 license)</string>
    <string name="start">LET\'S GO</string>
    <string name="error_download">Download error</string>
    <string name="error_audio_permission">Microphone permission not granted</string>
    <string name="error_location_permission">Location permission not granted</string>
    <string name="show_images">Show images</string>
    <string name="clear_db">Observations deleted</string>
    <string name="detailed_list">Detailed list</string>
    <string name="delete">Delete all observations?</string>
    <string name="share_app">Share app</string>
    <string name="settings_threshold">Threshold [%]</string>
    <string name="settings_highpass">High-Pass Filter [Hz]</string>
    <string name="source_unprocessed">Unprocessed</string>
    <string name="source_microphone">Microphone</string>
    <string name="source_voicerecognition">Voice Recognition</string>
    <string name="settings_audiosource">Audio Source</string>
    <string name="settings_notification_sound">Notification sound</string>
    <string name="save_wav">Save .wav files</string>
    <string name="summary_save_wav">Saves a .wav file for each detection in Music directory. Requires Android 12+</string>
    <string name="language">Language</string>
    <string name="summary_language">Change application language.</string>
    <string name="change_theme">Change Theme</string>
    <string name="crashLogs">Email crash logs</string>
    <string name="crashLogsSummary">Allow crash logs to be emailed to the developers. Each email will require explicit user confirmation.</string>
    <string name="crashMessageDialog">Unfortunately BirdLog crashed due to a severe error. If you want the developers to know and be able to troubleshoot, please consider to email a crash report now.</string>
    <string name="crashMessageEmail">Unfortunately BirdLog crashed! This email contains the crash log as attachment.\nCheck it out please.</string>
    <string name="crashContext">What did you do when this crash happened?</string>
    <string name="crashTitle">"BirdLog crashed</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
</resources>