<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

<Preference
    android:key="reset"
    android:layout="@layout/reset_button"/>

<ListPreference
    app:defaultValue="9"
    app:entries="@array/audio_source_entries"
    app:entryValues="@array/audio_source_values"
    app:key="audio_source"
    app:title="@string/settings_audiosource"
    app:useSimpleSummaryProvider="true" />

<org.tensorflow.lite.examples.soundclassifier.EditTextSeekBarPreference
    android:title="@string/settings_highpass"
    android:key="high_pass"
    android:max="1000"
    android:defaultValue="0"
    app:showSeekBarValue="true"
    />

<org.tensorflow.lite.examples.soundclassifier.EditTextSeekBarPreference
    android:title="@string/settings_threshold"
    android:key="model_threshold"
    android:max="100"
    android:defaultValue="30"
    app:showSeekBarValue="true"
    />

<SwitchPreferenceCompat
    android:title="Play notification sound"
    android:key="play_sound"
    android:defaultValue="false"
    />

<SwitchPreferenceCompat
    android:title="Save detections as .wav"
    android:summary="Saves a .wav file for each detection in Music directory. Requires Android 12+"
    android:key="write_wav"
    android:defaultValue="false"
    />

</PreferenceScreen>